--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -98,7 +98,7 @@ input[type=text], input[type=email] {
   -webkit-border-radius: 5px;
   border-radius: 5px; 
   margin-top:10px;
-  color: $secondary-font;
+  color: $black-font;
   font-size: 18px;
 }
 
@@ -134,8 +134,10 @@ table {
     .delete {
       color: $white-font;
       padding: 2px;
-      background: $green-buttons;
+      margin: 2px;
+      background: $primary-background;
       border-radius: 5px;
+      border: 2px solid $primary-border;
       box-shadow: 2px 2px 5px #ccc;
     }
 
