--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -34,11 +34,12 @@ nav {
   }
 
   li {
-    padding: 10px;
+    padding: 20px 10px;
     border: 2px solid $primary-border;
     margin-bottom: 10px;
     border-radius: 5px;
     background-color: $white-font;
+    text-align: center;
   }
 
   a{
@@ -91,7 +92,8 @@ input[type=text], input[type=email] {
   margin-bottom: -5px;
 }
 
-#button {
+#button,
+#updatebutton {
   padding:5px 15px; 
   background:$white-font; 
   border:1px solid $primary-border;
